# ai-bsp-agent

./: .dockerignore  .gitignore  AARCH64_AGENT_SKILL_DEV_PLAN.md  AGENTS.md  AGENT_SKILL_PLAN_REVIEW_COMMENTS.md  ANDROID_LINUX_BSP_BOOTING_SKILL_SETS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  LOG_PENDING_LIST.md  PIVOT_PLAN.md  PRODUCT_BLUEPRINT.md  QUICKSTART.md  README.md  cli.py  docker-compose.yml  fetch_comments.py  find_pr.py  issues.md  main.py  orchestrator.sh  pyproject.toml  pytest.ini  requirements.txt  studio_state.json  studio_state.seed.json  test.sh  trigger_submit.txt  verify_patch_delete.py  verify_unused.py
docs/: aarch64-exceptions.md  android-init.md  emulator-spec.md  memory-reclamation.md  skill-extension-guide.md  subsystem-boot.md  workspace-analysis.md
emulator_scripts/: collect-logs.sh  run-android-emulator.sh  run-linux-qemu.sh  setup.sh
fixtures/: expected_output_healthy_boot_03.json  expected_output_panic_log_01.json  expected_output_suspend_hang_02.json  expected_output_watchdog_esr_synergy_04.json  healthy_boot_03.txt  noise_template.txt  panic_log_01.txt  suspend_hang_02.txt  watchdog_esr_synergy_04.txt
history/: README.md  issues.md
mcp_server/: __init__.py  server.py
product/: schemas.py
reports/: skill_validation_report.md
reproduce/: test.patch
skills/: SKILL.md  __init__.py  extensions.py  registry.py
studio/: __init__.py  architect.py  config.py  manager.py  memory.py  optimizer.py  orchestrator.py  pm.py  qa_agent.py  review_agent.py  rules.md  scrum_master.py  studio_state.json  (+1 more)
(+204 files in other folders)
