[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "bsp-diagnostics-mcp"
version = "0.1.0"
description = "Android BSP Diagnostic Expert — MCP server exposing 11 BSP skills"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic",
    "mcp>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
bsp-diagnostics-mcp = "mcp_server.server:main_sync"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "skills*", "product*"]
